@@ -9,19 +9,22 @@
 	<description>MKISOFS Frontend</description>
 
 	<properties>
-		<java.version>21</java.version>
-		<maven.compiler.plugin>3.15.0</maven.compiler.plugin>
-		<maven.jar.plugin>3.5.0</maven.jar.plugin>
+		<maven.compiler.java.version>21</maven.compiler.java.version>
+		<maven.compiler.plugin.version>3.15.0</maven.compiler.plugin.version>
+		<maven.jar.plugin.version>3.5.0</maven.jar.plugin.version>
 		<maven.enforcer.plugin>3.6.2</maven.enforcer.plugin>
-		<swt.platform.version>linux-x86_64</swt.platform.version>
+		<swt.platform.name>org.eclipse.swt.gtk.linux.x86_64</swt.platform.name>
 		<xstream.version>1.4.21</xstream.version>
 		<slf4j.version>2.26.0</slf4j.version>
-		<jface.version>3.133.0</jface.version>
+		<swt.version>3.133.0</swt.version>
+		<swt.svg.version>3.132.0</swt.svg.version>
 		<jsvg.version>2.1.0</jsvg.version>
 		<lombok.version>1.18.44</lombok.version>
 		<commons-lang3.version>3.20.0</commons-lang3.version>
-		<debug.jvm.args>-Xdebug-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8010</debug.jvm.args>
 		<exec.maven.plugin>3.6.3</exec.maven.plugin>
+		<debug.port>5005</debug.port>
+		<debug.jvm.args>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:${debug.port}</debug.jvm.args>
+		<jvm.nativeacess.arg>--enable-native-access=ALL-UNNAMED</jvm.nativeacess.arg>
 		<jisocreator.main.class>cl.cavallinux.jisocreator.action.main.MainAction</jisocreator.main.class>
 	</properties>
 
@@ -30,9 +33,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven.compiler.plugin}</version>
+				<version>${maven.compiler.plugin.version}</version>
 				<configuration>
-					<release>${java.version}</release>
+					<release>${maven.compiler.java.version}</release>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
@@ -68,7 +71,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>${maven.jar.plugin}</version>
+				<version>${maven.jar.plugin.version}</version>
 				<configuration>
 					<archive>
 						<manifest>
@@ -86,10 +89,13 @@
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>${exec.maven.plugin}</version>
 				<configuration>
-					<mainClass>${jisocreator.main.class}</mainClass>
-					<classpathScope>runtime</classpathScope>
+					<executable>java</executable>
 					<arguments>
+						<argument>-classpath</argument>
+						<classpath />
 						<argument>${debug.jvm.args}</argument>
+						<argument>${jvm.nativeacess.arg}</argument>
+						<argument>${jisocreator.main.class}</argument>
 					</arguments>
 				</configuration>
 			</plugin>
@@ -102,11 +108,6 @@
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.github.weisj</groupId>
-			<artifactId>jsvg</artifactId>
-			<version>${jsvg.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
@@ -125,13 +126,23 @@
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.platform</groupId>
-			<artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
-			<version>3.133.0</version>
+			<artifactId>${swt.platform.name}</artifactId>
+			<version>${swt.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.platform</groupId>
 			<artifactId>org.eclipse.swt.svg</artifactId>
-			<version>3.132.0</version>
+			<version>${swt.svg.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.weisj</groupId>
+			<artifactId>jsvg</artifactId>
+			<version>${jsvg.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons-lang3.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.platform</groupId>
@@ -157,11 +168,6 @@
 			<groupId>org.eclipse.platform</groupId>
 			<artifactId>org.eclipse.ui.workbench</artifactId>
 			<version>3.138.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>${commons-lang3.version}</version>
 		</dependency>
 	</dependencies>
 </project>
